src/app/features/kik0005/canvas.component.css
/* Offcanvas */
.offcanvas {
  position: relative;
  transition: all .15s ease-out;
}

.offcanvas .sidebar {
  position: absolute;
  top: 0;
  width: 50%;
}

.offcanvas.right {
  right: 0;
}

.offcanvas.right.active {
  right: 50%;
}

.offcanvas.right .sidebar {
  right: -50%;
  display: none;
}

.offcanvas.right.active .sidebar {
  display: block;
}

@media screen and (max-width: 480px) {
  .offcanvas .sidebar {
    width: 100%;
  }

  .offcanvas.right.active {
    right: 100%;
  }

  .offcanvas.right .sidebar {
    right: -100%;
  }
}

